    
    - Fixed Bug #43714 - useInformationSchema with
      DatabaseMetaData.getExportedKeys() throws exception

    - Fixed Bug #42253 - multiple escaped quotes cause exception from
      EscapeProcessor

    - Fixed Bug #41566 - Quotes within comments not correctly ignored by
      statement parser

10-22-08 - Version 5.1.7
	- Fixed BUG#33861 - Added global blacklist for LoadBalancingConnectionProxy and
	  implemented in RandomBalanceStrategy and BestResponseTimeBalanceStrategy.
	  Added new property, "loadBalanceBlacklistTimeout", to control how long a
	  server lives in the global blacklist.
	  
	- Fixed BUG#38782 - Possible IndexOutOfBoundsException in random load balancing
	  strategy.
	  
	- Fixed BUG#39784 - invalidateCurrentConnection() does not manage global blacklist
	  when handling connection exceptions.

	- Fixed BUG#40031 - Adding support for CallableStatement.execute() to call
	  stored procedures that are defined as NO SQL or SQL READ DATA when failed
	  over to a read-only slave with replication driver.

	- Fixed BUG#35170- ResultSet.isAfterLast() doesn't work with for
	  streaming result sets.
	  
	- Fixed BUG#35199 - Parse error for metadata in stored function.
	
	- Fixed BUG#35415 - When result set is from views without access to underlying
	  columns and is opened with CONCUR_UPDATABLE, don't throw SQLExceptions when
	  checking updatability due to access permissions, instead return
	  CONCUR_READONLY from getConcurrency.
	  
	- Fixed BUG#35666 - NullPointerException when using "logSlowQueries=true" with
	  server-side prepared statements enabled.
	  
	- Fixed BUG#35660 - Calling equals() on connections created with "jdbc:mysql:loadbalance:"
	  URLs did not have the same behavior as "plain" connections. The behavior we use
	  is the implementation in java.lang.Object, load-balanced connections just happened
	  to be using a java.lang.reflect.Proxy which required some custom behavior in 